cabal-version: 3.0

name: adventofcode2018
version: 0.1.0.0
author: rvLMdE7
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md
data-files: input/*.txt

common common-lang-options
    default-language: Haskell2010
    default-extensions:
        BinaryLiterals
      , ImportQualifiedPost
      , NumericUnderscores

common common-exe-options
    import: common-lang-options
    ghc-options: -Wall -O2
    hs-source-dirs: run
    build-depends:
        base
      , adventofcode2018

common common-test-options
    import: common-lang-options
    ghc-options: -Wall -O2
    hs-source-dirs: run
    build-depends:
        base
      , adventofcode2018-tests

common common-dependencies
    import: common-lang-options
    build-depends:
        base ^>=4.14
      , bytestring
      , containers
      , flow
      , interpolatedstring-perl6
      , intervals
      , lens
      , linear
      , megaparsec
      , text
      , vector

library
    import:
          common-lang-options
        , common-dependencies
    ghc-options: -Wall
    hs-source-dirs: src
    other-modules:
        Common
    exposed-modules:
        Paths_adventofcode2018
      , Day01
      , Day02
      , Day03
      , Day05

library adventofcode2018-tests
    import:
          common-lang-options
        , common-dependencies
    ghc-options: -Wall -O2
    hs-source-dirs: spec
    build-depends:
        adventofcode2018
      , tasty
      , tasty-hunit
      , tasty-quickcheck
    exposed-modules:
        Test01
      , Test02
      , Test03
      , Test05

executable day-01
    import: common-exe-options
    mixins: adventofcode2018 (Day01 as Day)
    main-is: Run.hs

executable day-02
    import: common-exe-options
    mixins: adventofcode2018 (Day02 as Day)
    main-is: Run.hs

executable day-03
    import: common-exe-options
    mixins: adventofcode2018 (Day03 as Day)
    main-is: Run.hs

executable day-05
    import: common-exe-options
    mixins: adventofcode2018 (Day05 as Day)
    main-is: Run.hs

test-suite test-01
    import: common-test-options
    mixins: adventofcode2018-tests (Test01 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-02
    import: common-test-options
    mixins: adventofcode2018-tests (Test02 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-03
    import: common-test-options
    mixins: adventofcode2018-tests (Test03 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0

test-suite test-05
    import: common-test-options
    mixins: adventofcode2018-tests (Test05 as Test)
    main-is: Spec.hs
    type: exitcode-stdio-1.0
